adding code to validate precision and recall

--- a/final-demo-payments-sa.ipynb
+++ b/final-demo-payments-sa.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "id": "7d3d21b5",
    "metadata": {},
    "outputs": [],
@@ -17,18 +17,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "97a5afbd",
    "metadata": {},
    "outputs": [],
    "source": [
     "# import CSV\n",
-    "df_combined = pd.read_csv('combined.csv', encoding='latin-1', low_memory=False)"
+    "df_combined = pd.read_csv('../combined.csv', encoding='latin-1', low_memory=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "8818671a",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "6354b44a",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "ff87806d",
    "metadata": {},
    "outputs": [
@@ -134,7 +134,7 @@
        "4           2  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "c565d000",
    "metadata": {},
    "outputs": [],
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "e677a3a8",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "db9da74a",
    "metadata": {},
    "outputs": [
@@ -204,32 +204,32 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>3aeba0bb-c799-4d12-bfa2-80d8cfdb2e52</td>\n",
+       "      <td>57d552fd-043f-449e-94af-d0d6b98d0b70</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>2a2ea74b-2536-415a-8939-84c909e8165b</td>\n",
-       "      <td>3</td>\n",
+       "      <td>41fa9bb7-27a9-4741-bd6d-b2c9da441d58</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>23dead9f-83a9-43d8-9053-11691244b485</td>\n",
+       "      <td>57533f59-9589-4ccc-b549-d2424e938119</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>5df780ea-d967-47cc-96cb-5fb3d03d59ff</td>\n",
+       "      <td>2ce8cf90-d41c-4bdc-9265-c9e530040f84</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
-       "      <td>8a24b831-95c6-4a78-9972-cbd352f27a1b</td>\n",
-       "      <td>3</td>\n",
+       "      <td>615bfb32-bd81-4bda-9d7e-e234e51162db</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -239,33 +239,33 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9340219</th>\n",
-       "      <td>19148</td>\n",
-       "      <td>a9ef7fff-c11d-404f-a426-cefa3b501ac3</td>\n",
-       "      <td>1</td>\n",
+       "      <td>287265</td>\n",
+       "      <td>ded6f1c6-da60-48d5-b083-37c019623395</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9340220</th>\n",
-       "      <td>8647</td>\n",
-       "      <td>95425e47-bc2c-445e-b315-a078c35a8043</td>\n",
+       "      <td>115733</td>\n",
+       "      <td>3f5bd747-60a0-484f-b757-8953048dda2e</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9340221</th>\n",
-       "      <td>33111</td>\n",
-       "      <td>5e2459b9-35c1-4be6-8178-8b46e0315599</td>\n",
-       "      <td>1</td>\n",
+       "      <td>52428</td>\n",
+       "      <td>e559647d-635d-4545-9a50-cad7a0b17239</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9340222</th>\n",
-       "      <td>3642</td>\n",
-       "      <td>9185f1a0-f261-4b62-833a-16c204cfcb7c</td>\n",
-       "      <td>2</td>\n",
+       "      <td>112493</td>\n",
+       "      <td>bbf04a5f-c814-4d8b-a5da-6db35e70a6dd</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9340223</th>\n",
-       "      <td>142195</td>\n",
-       "      <td>05d9292d-96a0-42c5-95fc-61e4933320f8</td>\n",
-       "      <td>3</td>\n",
+       "      <td>76186</td>\n",
+       "      <td>ecdab097-ca9d-4ed5-995e-38322192f4c2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -274,22 +274,22 @@
       ],
       "text/plain": [
        "         user_id                               item_id  event_name\n",
-       "0              1  3aeba0bb-c799-4d12-bfa2-80d8cfdb2e52           1\n",
-       "1              2  2a2ea74b-2536-415a-8939-84c909e8165b           3\n",
-       "2              3  23dead9f-83a9-43d8-9053-11691244b485           2\n",
-       "3              4  5df780ea-d967-47cc-96cb-5fb3d03d59ff           3\n",
-       "4              5  8a24b831-95c6-4a78-9972-cbd352f27a1b           3\n",
+       "0              1  57d552fd-043f-449e-94af-d0d6b98d0b70           1\n",
+       "1              2  41fa9bb7-27a9-4741-bd6d-b2c9da441d58           2\n",
+       "2              3  57533f59-9589-4ccc-b549-d2424e938119           2\n",
+       "3              4  2ce8cf90-d41c-4bdc-9265-c9e530040f84           3\n",
+       "4              5  615bfb32-bd81-4bda-9d7e-e234e51162db           2\n",
        "...          ...                                   ...         ...\n",
-       "9340219    19148  a9ef7fff-c11d-404f-a426-cefa3b501ac3           1\n",
-       "9340220     8647  95425e47-bc2c-445e-b315-a078c35a8043           3\n",
-       "9340221    33111  5e2459b9-35c1-4be6-8178-8b46e0315599           1\n",
-       "9340222     3642  9185f1a0-f261-4b62-833a-16c204cfcb7c           2\n",
-       "9340223   142195  05d9292d-96a0-42c5-95fc-61e4933320f8           3\n",
+       "9340219   287265  ded6f1c6-da60-48d5-b083-37c019623395           2\n",
+       "9340220   115733  3f5bd747-60a0-484f-b757-8953048dda2e           3\n",
+       "9340221    52428  e559647d-635d-4545-9a50-cad7a0b17239           3\n",
+       "9340222   112493  bbf04a5f-c814-4d8b-a5da-6db35e70a6dd           3\n",
+       "9340223    76186  ecdab097-ca9d-4ed5-995e-38322192f4c2           1\n",
        "\n",
        "[9340224 rows x 3 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "id": "f6c7f147",
    "metadata": {},
    "outputs": [
@@ -349,7 +349,7 @@
        "      <th>1</th>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
-       "      <td>3</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -367,7 +367,7 @@
        "      <th>4</th>\n",
        "      <td>5</td>\n",
        "      <td>5</td>\n",
-       "      <td>3</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -377,33 +377,33 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9340219</th>\n",
-       "      <td>19148</td>\n",
-       "      <td>52780</td>\n",
-       "      <td>1</td>\n",
+       "      <td>287265</td>\n",
+       "      <td>3592</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9340220</th>\n",
-       "      <td>8647</td>\n",
-       "      <td>1462</td>\n",
+       "      <td>115733</td>\n",
+       "      <td>14565</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9340221</th>\n",
-       "      <td>33111</td>\n",
-       "      <td>24684</td>\n",
-       "      <td>1</td>\n",
+       "      <td>52428</td>\n",
+       "      <td>1831</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9340222</th>\n",
-       "      <td>3642</td>\n",
-       "      <td>7358</td>\n",
-       "      <td>2</td>\n",
+       "      <td>112493</td>\n",
+       "      <td>316</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9340223</th>\n",
-       "      <td>142195</td>\n",
-       "      <td>2087</td>\n",
-       "      <td>3</td>\n",
+       "      <td>76186</td>\n",
+       "      <td>13752</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -413,21 +413,21 @@
       "text/plain": [
        "         user_id  item_id  event_name\n",
        "0              1        1           1\n",
-       "1              2        2           3\n",
+       "1              2        2           2\n",
        "2              3        3           2\n",
        "3              4        4           3\n",
-       "4              5        5           3\n",
+       "4              5        5           2\n",
        "...          ...      ...         ...\n",
-       "9340219    19148    52780           1\n",
-       "9340220     8647     1462           3\n",
-       "9340221    33111    24684           1\n",
-       "9340222     3642     7358           2\n",
-       "9340223   142195     2087           3\n",
+       "9340219   287265     3592           2\n",
+       "9340220   115733    14565           3\n",
+       "9340221    52428     1831           3\n",
+       "9340222   112493      316           3\n",
+       "9340223    76186    13752           1\n",
        "\n",
        "[9340224 rows x 3 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "228dadc2",
    "metadata": {},
    "outputs": [],
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "id": "559f7225",
    "metadata": {},
    "outputs": [],
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "id": "ab096acf",
    "metadata": {},
    "outputs": [],
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "id": "a341ea0e",
    "metadata": {},
    "outputs": [],
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "id": "ee5a4c55",
    "metadata": {},
    "outputs": [
@@ -530,17 +530,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "id": "5ea5ea64",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'rmse': 0.6606135097668238, 'mae': 0.5545889397974777}"
+       "{'rmse': 0.6605484516177441, 'mae': 0.5545457289133329}"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,27 +552,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "id": "93b6e8b1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'split0_test_rmse': array([0.66045065]),\n",
-       " 'split1_test_rmse': array([0.66077637]),\n",
-       " 'mean_test_rmse': array([0.66061351]),\n",
-       " 'std_test_rmse': array([0.00016286]),\n",
+       "{'split0_test_rmse': array([0.66069653]),\n",
+       " 'split1_test_rmse': array([0.66040038]),\n",
+       " 'mean_test_rmse': array([0.66054845]),\n",
+       " 'std_test_rmse': array([0.00014807]),\n",
        " 'rank_test_rmse': array([1]),\n",
-       " 'split0_test_mae': array([0.55443892]),\n",
-       " 'split1_test_mae': array([0.55473896]),\n",
-       " 'mean_test_mae': array([0.55458894]),\n",
-       " 'std_test_mae': array([0.00015002]),\n",
+       " 'split0_test_mae': array([0.55462998]),\n",
+       " 'split1_test_mae': array([0.55446148]),\n",
+       " 'mean_test_mae': array([0.55454573]),\n",
+       " 'std_test_mae': array([8.42484046e-05]),\n",
        " 'rank_test_mae': array([1]),\n",
-       " 'mean_fit_time': array([22.40068495]),\n",
-       " 'std_fit_time': array([0.11970985]),\n",
-       " 'mean_test_time': array([44.11881554]),\n",
-       " 'std_test_time': array([0.1598295]),\n",
+       " 'mean_fit_time': array([24.5442791]),\n",
+       " 'std_fit_time': array([0.14565611]),\n",
+       " 'mean_test_time': array([44.7590735]),\n",
+       " 'std_test_time': array([0.33422256]),\n",
        " 'params': [{'n_factors': 5,\n",
        "   'n_epochs': 5,\n",
        "   'lr_all': 0.01,\n",
@@ -585,7 +585,7 @@
        " 'param_verbose': [True]}"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "id": "f2bd6fd9",
    "metadata": {},
    "outputs": [],
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "id": "025fc375",
    "metadata": {},
    "outputs": [
@@ -626,10 +626,10 @@
     {
      "data": {
       "text/plain": [
-       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x7fcb9e9b7280>"
+       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x7fb1d4fee070>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "id": "fc80e784",
    "metadata": {},
    "outputs": [
@@ -664,10 +664,10 @@
     {
      "data": {
       "text/plain": [
-       "0.6472425894190661"
+       "0.6471911263125557"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "id": "e090d988",
    "metadata": {},
    "outputs": [
@@ -697,16 +697,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Unbiased accuracy on B, RMSE: 0.6587\n"
+      "Unbiased accuracy on B, RMSE: 0.6584\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.6586520269800202"
+       "0.6584451700028027"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "id": "c5791e95",
    "metadata": {},
    "outputs": [],
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
    "id": "fe7708d9",
    "metadata": {},
    "outputs": [],
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 23,
    "id": "f6d6e827",
    "metadata": {},
    "outputs": [],
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 24,
    "id": "d6602053",
    "metadata": {},
    "outputs": [],
@@ -786,13 +786,105 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "7b46429f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Return precision and recall at k metrics for each user\n",
+    "def precision_recall_at_k(predictions, k = 15, threshold = 3):\n",
+    "    \n",
+    "    # First map the predictions to each user.\n",
+    "    user_est_true = defaultdict(list)\n",
+    "    for uid, _, true_r, est, _ in predictions:\n",
+    "        user_est_true[uid].append((est, true_r))\n",
+    "    \n",
+    "    precisions = dict()\n",
+    "    recalls = dict()\n",
+    "    for uid, user_ratings in user_est_true.items():\n",
+    "        \n",
+    "        # Sort user ratings by estimated value\n",
+    "        user_ratings.sort(key=lambda x: x[0], reverse=True)\n",
+    "        \n",
+    "        # Number of relevant items\n",
+    "        n_rel = sum((true_r >= threshold) for (_, true_r) in user_ratings)\n",
+    "        \n",
+    "        # Number of recommended items in top k\n",
+    "        n_rec_k = sum((est >= threshold) for (est, _) in user_ratings[:k])\n",
+    "        \n",
+    "        # Number of relevant and recommended items in top k\n",
+    "        n_rel_and_rec_k = sum(((true_r >= threshold) and (est >= threshold)) for (est, true_r) in user_ratings[:k])\n",
+    "        \n",
+    "        # Precision@K: Proportion of recommended items that are relevant\n",
+    "        precisions[uid] = n_rel_and_rec_k / n_rec_k if n_rec_k != 0 else 1\n",
+    "        \n",
+    "        # Recall@K: Proportion of relevant items that are recommended\n",
+    "        recalls[uid] = n_rel_and_rec_k / n_rel if n_rel != 0 else 1\n",
+    "    \n",
+    "    return precisions, recalls;"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "e77f9543",
+   "id": "41b891a0",
    "metadata": {},
    "source": [
-    "## Testing agains 10% (testset)\n",
-    "#### this will get for an user-item recommended value\n"
+    "## Recall and Precision"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "49b23af0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.934766635971483"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "precisions, recalls = precision_recall_at_k(predictions_for_test, k = 20, threshold = 2)\n",
+    "precision = sum(prec for prec in precisions.values()) / len(precisions)\n",
+    "precision"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "50fdc107",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.681918040356784"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recall = sum(rec for rec in recalls.values()) / len(recalls)\n",
+    "recall"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2111683",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
